...
        bottomImageGradient.colors = [colorTop, colorBottom]
        bottomImageGradient.locations = [0.0, 1.0]
        view.layer.insertSublayer(bottomImageGradient, at: 0)
        return view
    }()
    
    private lazy var likeButton: UIButton = {
        let btn = UIButton()
        btn.translatesAutoresizingMaskIntoConstraints = false
        btn.titleLabel?.text = ""
        btn.addTarget(self, action: #selector(likeButtonClicked), for: .touchUpInside)
        btn.accessibilityIdentifier = "likeButton"
        return btn
...
